<resources>
    <string name="app_name">EasyMV</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="cancel">Cancel</string>
    <string name="quit">Quit</string>
    <string name="select_folder">Select Folder</string>

    <string name="game_settings">Game Settings</string>
    <string name="compatibility_settings">Compatibility</string>

    <string name="set_title">Set Title</string>
    <string name="set_title_comment">specify a title to display</string>
    <string name="fix_local_storage">LocalStorage</string>
    <string name="fix_local_storage_comment">save game files in the game directory, it will persist even if you uninstalled this EasyMV. Recommended to switch on.</string>
    <string name="bootstrap">Use Bootstrap</string>
    <string name="bootstrap_comment">auto select webgl, canvas and audio</string>
    <string name="force_audio_ext">Force Audio Extension</string>
    <string name="force_audio_ext_comment">change this when LoadError occurs</string>
    <string name="show_fps">Show FPS</string>
    <string name="show_fps_comment">show fps bar when playing</string>
    <string name="back_button_quit">Back Button Quit</string>
    <string name="back_button_quit_comment">give back button the ability to exit the game</string>
    <string name="force_canvas">Force Canvas</string>
    <string name="force_canvas_comment">forcibly use canvas to render</string>
    <string name="force_no_audio">Force No Audio</string>
    <string name="force_no_audio_comment">forcibly turn off the sound, turn on this when error occurs</string>
    <string name="add_gamepad">Add Gamepad</string>
    <string name="manually_start">Manually Start</string>
    <string name="manually_start_comment">execute command "SceneManager.run(Scene_Boot);" manually, turn on when game cannot start. </string>

    <string name="search_path">Search Path</string>

    <string name="unable_to_save">Warning: Unable to Save Data</string>
    <string name="unable_to_load">Warning: Unable to Load Data</string>

    <string-array name="quit_message">
        <item>Do you wish to quit $1?</item>
        <item>Any unsaved progress will be lost.</item>
    </string-array>
    <string name="add_gamepad_comment">only need to add when no gamepad occurs</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="fake_greenworks">Use Fake greenworks.js</string>
    <string name="fake_greenworks_comment">Game may use greenworks.js to submit archievement to steam. Use fake greenworks to prevent error.</string>

</resources>
